<resources>
    <string name="app_name">DALI-RC IR Fernbedienung</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_help">Help</string>
    <string name="action_ueber">Über</string>
    <string name="help_check">Hilfe anzeigen</string>


    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_name_modi_standard">Standard Modus</string>
    <string name="pref_name_modi_programmier">Programmier Modus</string>
    <string name="pref_name_modi_installation">Installations Modus</string>
    <string name="pref_name_send_bugreport">Anonyme Bugreports</string>
    <string name="pref_name_Help_Mode">Hilfe</string>
    <string name="pref_name_version">Version</string>



    <string name="pref_modi_standard">Standard Modus anzeigen</string>
    <string name="pref_modi_programmier">Programmier Modus anzeigen</string>
    <string name="pref_modi_installation">Installations Modus anzeigen</string>
    <string name="pref_send_bugreport">Sende anonyme Bugreports wenn ein Fehler auftritt</string>
    <string name="pref_Help_Mode">Aktiviert den Hilfe Modus</string>
    <string name="pref_version">Beta Version 1.0</string>


    <string name="advanced_settings">Erweiterte Einstellungen</string>
    <string name="pref_modi">Modi</string>
    <string name="private_settings">Privatsphäre</string>

    //Help Ressourcen
    <string name="Direct100">Setzt die aktuelle Helligkeit der ausgewählten Gruppe auf 100%.</string>
    <string name="Direct50">Setzt die aktuelle Helligkeit der ausgewählten Gruppe auf 50%.</string>
    <string name="Direct25">Setzt die aktuelle Helligkeit der ausgewählten Gruppe auf 25%.</string>
    <string name="Direct12">Setzt die aktuelle Helligkeit der ausgewählten Gruppe auf 12%.</string>
    <string name="Direct6">Setzt die aktuelle Helligkeit der ausgewählten Gruppe auf 6%.</string>
    <string name="on_off">Schalted die aktuelle Gruppe Ein bzw Aus.</string>
    <string name="up">Dimmt die aktuelle Gruppe um einen Schritt hoch.</string>
    <string name="down">Dimmt die aktuelle gruppe um einen Schritt runter.</string>
    <string name="Automatik_">Setzt die Lichtregelung auf Automaik um.</string>
    <string name="Szene0">Ruft Szene 0 auf.</string>
    <string name="Szene1">Ruft Szene 1 auf.</string>

    <string name="bewegung_Active">Aktiviert die Bewegungserkennung des Sensors.</string>
    <string name="bewegung_Only_off">	Schalted das Licht nach gewisser zeit ohne Bewegung aus. Das licht wird bei neuer bewegung aber nicht eingeschalted.</string>
    <string name="bewegung_Inactive">Deaktiviert die Bewegungserkennung des Sensors.</string>
    <string name="licht_active">Aktiviert die Lichtregelung des Sensors.</string>
    <string name="licht_inactive">Deaktiviert die Lichtregelung des Sensors.</string>
    <string name="previous_device">Springe zum vohrigen Gerät.</string>
    <string name="next_device">Springe zum nächsten Gerät.</string>
    <string name="assign">Weist das ausgewählte gheröt dem Sensor zu.</string>
    <string name="remove">Entfernt das ausgewählte gerät von dem Sensor.</string>
    <string name="Start_Adress">Adressiert das komplette system neu.</string>
    <string name="Exit">Verlasse den Installations modus:</string>

    <string name="next_group">Springe zur nächsten Gruppe.</string>
    <string name="previous_group">Springe zur vorhigen Gruppe.</string>
    <string name="Automatik">INSERT HERE</string>
    <string name="save_scene0">speichert den aktuellen zustand als Szene 0.</string>
    <string name="save_scene1">speichert den aktuellen zustand als Szene 1.</string>
    <string name="Dimm_up">Dimmt die aktuell ausgewählte gruppe hoch.</string>
    <string name="Dimm_down">Dimmt die aktuell ausgewählte Gruppe runter.</string>



</resources>
